# flowex-py

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml  test.py
.github/workflows/: build.yml
cmd/lib/: api.go  state.go
flowex/: __init__.py  _lib.py  _models.py
