[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowex"
version = "0.1.0"
description = "Real-time multi-exchange crypto market data in Python — WebSocket streaming, order book metrics, and per-symbol actor workers for Binance, Bybit, and Bitget."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "KhavrTrading" },
]
keywords = [
    "crypto",
    "trading",
    "market-data",
    "websocket",
    "binance",
    "bybit",
    "bitget",
    "order-book",
    "depth",
    "real-time",
    "go",
    "cgo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/KhavrTrading/flowex-py"
Repository = "https://github.com/KhavrTrading/flowex-py"
Issues = "https://github.com/KhavrTrading/flowex-py/issues"

[tool.setuptools.packages.find]
include = ["flowex*"]

[tool.setuptools.package-data]
flowex = ["lib/*"]
